<resources>
    <string name="app_name">Park\'d</string>

    <string name="editTextUsernameHint">Username</string>
    <string name="editTextPasswordHint">Password</string>
    <string name="buttonLoginText">Login</string>
    <string name="login_fail_username">No account associated with that username.</string>
    <string name="login_fail_password">Incorrect password.</string>
    <string name="addVehicleParkButton">Park</string>
    <string name="addVehicleCancel"><u>Cancel</u></string>
    <string name="license_plate_number">License Plate Number</string>
    <string name="release_vehicle_to_owner">Release Vehicle to owner</string>
    <string name="license_plate_descriptor">License Plate:</string>
    <string name="vehicle_type_descriptor">Vehicle Type:</string>
    <string name="attendant_descriptor">Attendant:</string>
    <string name="park_time_descriptor">Park Time:</string>
    <string name="elapsed_time_descriptor">Elapsed Time:</string>
    <string name="spot_type_descriptor">Spot Type:</string>
    <string name="logo_descriptor_text">Parked Logo</string>
    <string name="back_button_description">Back</string>
    <string name="enter_vehicle_information">Enter Vehicle Information</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="time_starts_in">Time starts in:</string>
    <string name="spot">Spot:</string>
    <string name="end_time_descriptor">End Time:</string>
    <string name="total_descriptor">Total:</string>
    <string name="billing_type_descriptor">Billing Type:</string>
    <string name="username">Username:</string>
    <string name="user_id">User Id:</string>
    <string name="user_type">User Type:</string>
    <string name="active_tickets">Active Tickets:</string>
    <string name="total_tickets">Total Tickets:</string>
    <string name="active">Active:</string>
    <string name="toggle_active">Toggle Active</string>
    <string name="build">Build</string>
    <string name="logout">Logout</string>
    <string name="enter_user_information">Enter User Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="total">Total Price:</string>
</resources>
