<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <ImageButton
            android:id="@+id/addNewUser_ToolbarBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/back_button_description"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="30sp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="?attr/actionBarSize"
        android:background="@drawable/rounded_rectangle"
        android:elevation="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/enter_user_information"
            android:textColor="@color/colorTextDark"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/addNewUser_FirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorTextDark"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/addNewUser_LastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorTextDark"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/addNewUser_UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/user_name"
            android:inputType="textNoSuggestions"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorTextDark"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/addNewUser_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorTextDark"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/addNewUser_ConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextDark"
            android:textColorHint="@color/colorTextDark"
            tools:ignore="Autofill" />

        <Spinner
            android:id="@+id/addNewUser_UserType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:backgroundTint="@color/colorTextDark"
            android:popupBackground="@color/colorPrimaryDark"
            tools:listitem="@layout/spinner_item" />

        <Button
            android:id="@+id/addNewUser_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/done" />

    </LinearLayout>
</FrameLayout>