<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dev.aidaco.parked.Fragments.LoginFragment"
    android:gravity="center"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:saveEnabled="false"
        android:contentDescription="@string/logo_descriptor_text"
        android:src="@drawable/ic_logo_temp" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextUsernameHint"
        android:inputType="textNoSuggestions"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextPasswordHint"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:textColor="@color/colorText"
        android:textColorHint="@color/colorText" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/buttonLoginText" />

    <Button
        android:id="@+id/buttonLoginTest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Create Test User" />

    <ProgressBar
        android:id="@+id/progressBarLoginLoading"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:progressDrawable="@drawable/login_loading_spinner" />
</LinearLayout>
