<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/spot"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/parkVehicle_SpotNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center|top"
        android:textColor="@color/colorText"
        android:textSize="100sp"
        tools:text="87" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/time_starts_in"
        android:textColor="@color/colorText"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/parkVehicle_Timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="100sp"
        tools:text="28s" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/parkVehicle_Done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/parkVehicle_Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/colorText"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>