<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:gravity="top">

        <ImageButton
            android:id="@+id/userDetail_ToolbarUp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/back_button_description"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="30sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/userDetail_FullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="@color/colorText"
        android:textSize="40sp"
        tools:text="Aidan Courtney" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"

                android:text="@string/username"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"

                android:text="@string/user_id"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"

                android:text="@string/user_type"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/active"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"

                android:text="@string/active_tickets"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"

                android:text="@string/total_tickets"
                android:textColor="@color/colorText"
                android:textSize="20sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userDetail_Username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                tools:text="couai9" />

            <TextView
                android:id="@+id/userDetail_UserId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:textColor="@color/colorText"
                android:textSize="20sp"
                tools:text="0" />

            <TextView
                android:id="@+id/userDetail_UserType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                tools:text="Admin" />

            <TextView
                android:id="@+id/userDetail_Active"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="@color/colorText"
                android:textSize="20sp"
                tools:text="Yes" />

            <TextView
                android:id="@+id/userDetail_ActiveTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:textColor="@color/colorText"
                android:textSize="20sp"
                tools:text="89" />

            <TextView
                android:id="@+id/userDetail_TotalTickets"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"

                android:textColor="@color/colorText"
                android:textSize="20sp"
                tools:text="206" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/userDetail_ToggleActive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:text="@string/toggle_active" />
</LinearLayout>