<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:gravity="top">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorText"
            android:textSize="30sp" />

        <ImageButton
            android:id="@+id/managerHome_ToggleContent"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/colorPrimaryDark"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:contentDescription="@string/back_button_description"
            android:src="@drawable/ic_ticket" />

        <ImageButton
            android:id="@+id/managerHome_Create"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/build"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            android:src="@drawable/ic_build" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/managerHome_Recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="15"
        tools:layoutManager="LinearLayoutManager"
        tools:listitem="@layout/user_list_item"
        tools:spanCount="2">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/managerHome_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_vehicle"
        app:backgroundTint="@color/colorPrimaryDark" />

</RelativeLayout>